--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:_41razmer"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="750" d:DesignWidth="1400"
       Title="ProductPage" FontFamily="Comic Sans MS">
 
     <Grid>
@@ -15,6 +15,10 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions></Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="5">
+            <TextBlock FontSize="20" Name="TextBlockFIO"></TextBlock>
+            <TextBlock FontSize="20" Name="TextBlockRole"></TextBlock>
+        </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Vertical" Margin="5">
             <Grid>
                 <Grid.RowDefinitions>
